syntax = "proto3";
package routerprotocol.routerchain.multichain;

option go_package = "github.com/router-protocol/sdk-go/routerchain/multichain/types";

import "multichain/chain_type.proto"; 
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

message ChainConfig {
  string chainId = 1; 
  string chainName = 2; 
  string symbol = 3; 
  string TokenPrice = 4 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string GasPrice = 5 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  ChainType chainType = 6; 
  uint64 confirmationsRequired = 7; 
  string gatewayContractAddress = 8; 
  uint64 gatewayContractHeight = 9; 
  string routerContractAddress = 10; 
  uint64 lastObservedEventNonce = 11;
  uint64 lastObservedEventBlockHeight = 12; 
  uint64 lastObservedValsetNonce = 13; 
  string creator = 14;
}

