syntax = "proto3";

package routerprotocol.routerchain.pricefeed;

import "gogoproto/gogo.proto";
import "routerchain/pricefeed/price.proto";
import "routerchain/pricefeed/gas_price.proto";

option go_package = "github.com/router-protocol/sdk-go/routerchain/pricefeed/types";

// Msg defines the Msg service.
service Msg {
  rpc TokenPrices (MsgTokenPrices) returns (MsgTokenPricesResponse);
  rpc GasPrices   (MsgGasPrices  ) returns (MsgGasPricesResponse  );
}
message MsgTokenPrices {
           string price_feeder_address = 1;
           string price_feeder_name    = 2;
  repeated Price  token_prices         = 3 [(gogoproto.nullable) = false];
}

message MsgTokenPricesResponse {}

message MsgGasPrices {
  string price_feeder_address = 1;
  string price_feeder_name    = 2;
  repeated GasPrice  gas_prices         = 3 [(gogoproto.nullable) = false];
}

message MsgGasPricesResponse {}

